Stop nav from collapsing on click

--- a/assets/scss/theme/_docs.scss
+++ b/assets/scss/theme/_docs.scss
@@ -182,8 +182,10 @@
 	
 	
 	.section-title {
-		font-size: 1rem;
 		margin-bottom: 1rem;
+		
+		font-size: 1rem;
+		pointer-events: none;
 		a {
 			&:hover {
 				text-decoration: none;
